force-app/main/default/objects/Annual_Giving_Summary__c/Annual_Giving_Summary__c.object-meta.xml
<CustomObject>
    <description>Per-donor, per-fiscal-year (July 1–June 30) accumulator of giving. Keeps a running hard-credit total, soft-credit total, combined total, the earned/effective/override level, and the date each level was achieved. Links to the prior year's summary to carry a level forward one year (inheritance). Populated by Gift Allocation rollups + level automation. JSI-90 Moves Management. Author: Jason Ott.</description>
    <label>Annual Giving Summary</label>
    <nameField>
        <displayFormat>AGS-{00000}</displayFormat>
        <label>Annual Giving Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Giving Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>