force-app/main/default/objects/Annual_Giving_Summary__c/fields/Board_Commitment_Met__c.field-meta.xml
<CustomField>
    <fullName>Board_Commitment_Met__c</fullName>
    <description>TRUE when a board commitment exists and the applied giving meets or exceeds it. JSI-123 / Jason Ott.</description>
    <formula>AND(
  BLANKVALUE(Board_Commitment__c, 0) &gt; 0,
  Board_Commitment_Applied__c &gt;= Board_Commitment__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Commitment Met</label>
    <type>Checkbox</type>
</CustomField>