force-app/main/default/objects/Annual_Giving_Summary__c/fields/Board_Commitment_Override__c.field-meta.xml
<CustomField>
    <fullName>Board_Commitment_Override__c</fullName>
    <description>When checked, the board-commitment automation will NOT overwrite Board Commitment for this year — the value has been set manually. JSI-123 / Jason Ott.</description>
    <label>Board Commitment Override</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>