force-app/main/default/objects/Annual_Giving_Summary__c/fields/Board_Commitment_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Board_Commitment_Remaining__c</fullName>
    <description>Dollars still owed toward the board commitment this year = MAX(Commitment - Applied, 0). Zero when there is no commitment. JSI-123 / Jason Ott.</description>
    <formula>IF(
  BLANKVALUE(Board_Commitment__c, 0) &gt; 0,
  MAX(Board_Commitment__c - Board_Commitment_Applied__c, 0),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Board Commitment Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>