force-app/main/default/objects/Annual_Giving_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The donor this fiscal-year summary belongs to. Restrict delete so a contact with giving history cannot be removed. JSI-90 / Jason Ott.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Annual Giving Summaries</relationshipLabel>
    <relationshipName>Annual_Giving_Summaries</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>