force-app/main/default/objects/Annual_Giving_Summary__c/fields/Date_Achieved_Congressional__c.field-meta.xml
<CustomField>
    <fullName>Date_Achieved_Congressional__c</fullName>
    <description>EXAMPLE level date field (per the "N date fields" design, D2). Close Date of the gift that pushed this donor's Total Giving over the Congressional threshold this year. When a new level is added, an admin adds a matching Date_Achieved_&lt;Level&gt;__c field and extends the level automation. JSI-90 / Jason Ott.</description>
    <inlineHelpText>Date the donor reached the Congressional level this year (auto-stamped).</inlineHelpText>
    <label>Date Achieved — Congressional</label>
    <type>Date</type>
</CustomField>