force-app/main/default/objects/Annual_Giving_Summary__c/fields/Date_Achieved_Governor_s_Society__c.field-meta.xml
<CustomField>
    <fullName>Date_Achieved_Governor_s_Society__c</fullName>
    <description>Date the donor first reached Governor's Society during this giving year. Stamped by GiftAllocationService, which derives this field&apos;s API name from the Giving Level record name - so the level must stay named exactly &quot;Governor's Society&quot; or the stamp is silently skipped. JSI-90 / Jason Ott.</description>
    <label>Date Achieved — Governor's Society</label>
    <type>Date</type>
</CustomField>