force-app/main/default/objects/Annual_Giving_Summary__c/fields/Earned_Level__c.field-meta.xml
<CustomField>
    <fullName>Earned_Level__c</fullName>
    <description>The Giving Level this year's Total Giving qualifies for on its own (before inheritance/override). Set by level automation. JSI-90 / Jason Ott.</description>
    <label>Earned Level</label>
    <referenceTo>Giving_Level__c</referenceTo>
    <relationshipLabel>Summaries (Earned Level)</relationshipLabel>
    <relationshipName>Summaries_Earned_Level</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>