force-app/main/default/objects/Annual_Giving_Summary__c/fields/Effective_Level__c.field-meta.xml
<CustomField>
    <fullName>Effective_Level__c</fullName>
    <description>The level the donor actually holds this year after inheritance — the higher rank of Earned Level and the prior year's Effective Level. Set by level automation. Does not include manual overrides (see Level Override / Level Display). JSI-90 / Jason Ott.</description>
    <label>Effective Level</label>
    <referenceTo>Giving_Level__c</referenceTo>
    <relationshipLabel>Summaries (Effective Level)</relationshipLabel>
    <relationshipName>Summaries_Effective_Level</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>