force-app/main/default/objects/Annual_Giving_Summary__c/fields/Fiscal_Year_Label__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Label__c</fullName>
    <description>Human-readable label for the JCRC giving year this summary covers (July 1–June 30), e.g. "FY2027 (Jul 2026–Jun 2027)". JSI-90 / Jason Ott.</description>
    <label>Fiscal Year Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>