force-app/main/default/objects/Annual_Giving_Summary__c/fields/FY_End__c.field-meta.xml
<CustomField>
    <fullName>FY_End__c</fullName>
    <description>End of the giving year this summary covers (June 30). JSI-90 / Jason Ott.</description>
    <label>FY End</label>
    <type>Date</type>
</CustomField>