force-app/main/default/objects/Annual_Giving_Summary__c/fields/FY_Start__c.field-meta.xml
<CustomField>
    <fullName>FY_Start__c</fullName>
    <description>Start of the giving year this summary covers (July 1). Used to place a gift into the correct year's summary by Close Date. JSI-90 / Jason Ott.</description>
    <label>FY Start</label>
    <type>Date</type>
</CustomField>