force-app/main/default/objects/Annual_Giving_Summary__c/fields/Level_Display__c.field-meta.xml
<CustomField>
    <fullName>Level_Display__c</fullName>
    <description>The level shown for this donor/year: the Level Override if one is set, otherwise the Effective Level. JSI-90 / Jason Ott.</description>
    <formula>IF(NOT(ISBLANK(Level_Override__c)), Level_Override__r.Name, BLANKVALUE(Effective_Level__r.Name, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Level (Displayed)</label>
    <type>Text</type>
</CustomField>