force-app/main/default/objects/Annual_Giving_Summary__c/fields/Level_Override__c.field-meta.xml
<CustomField>
    <fullName>Level_Override__c</fullName>
    <description>Manual level override for this year only. When set, it (not the Effective Level) is the donor's displayed level. Overrides do NOT carry forward — next year's summary inherits the earned/effective level, not the override. JSI-90 / Jason Ott.</description>
    <inlineHelpText>Manually grant a level for this year. Does not carry into next year.</inlineHelpText>
    <label>Level Override</label>
    <referenceTo>Giving_Level__c</referenceTo>
    <relationshipLabel>Summaries (Override Level)</relationshipLabel>
    <relationshipName>Summaries_Override_Level</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>