force-app/main/default/objects/Annual_Giving_Summary__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <description>Why the level was manually overridden this year (audit trail). JSI-90 / Jason Ott.</description>
    <label>Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>