force-app/main/default/objects/Annual_Giving_Summary__c/fields/Prior_Effective_Level__c.field-meta.xml
<CustomField>
    <fullName>Prior_Effective_Level__c</fullName>
    <description>Read-only display of the prior year's Effective Level name (via Prior Year Summary). Reference for the inheritance calculation. JSI-90 / Jason Ott.</description>
    <formula>BLANKVALUE(Prior_Year_Summary__r.Effective_Level__r.Name, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Prior Effective Level</label>
    <type>Text</type>
</CustomField>