force-app/main/default/objects/Annual_Giving_Summary__c/fields/Prior_Year_Summary__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Summary__c</fullName>
    <description>This donor's summary for the previous giving year. Enables level inheritance — a level earned last year is held for this year (effective level = higher of this year's earned and last year's effective). JSI-90 / Jason Ott.</description>
    <label>Prior Year Summary</label>
    <referenceTo>Annual_Giving_Summary__c</referenceTo>
    <relationshipLabel>Next Year Summaries</relationshipLabel>
    <relationshipName>Next_Year_Summaries</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>