force-app/main/default/objects/Annual_Giving_Summary__c/fields/Total_Giving__c.field-meta.xml
<CustomField>
    <fullName>Total_Giving__c</fullName>
    <description>Combined qualification total = Total Hard Credit + Total Soft Credit. This is the amount compared against Giving Level thresholds. JSI-90 / Jason Ott.</description>
    <formula>BLANKVALUE(Total_Hard_Credit__c, 0) + BLANKVALUE(Total_Soft_Credit__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Giving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>