force-app/main/default/objects/Annual_Giving_Summary__c/fields/Total_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Soft_Credit__c</fullName>
    <description>Sum of Soft-credit Gift Allocations for this donor and giving year (native roll-up summary over the master-detail child, filtered to Credit Type = Soft). JSI-90 / Jason Ott.</description>
    <label>Total Soft Credit</label>
    <summarizedField>Gift_Allocation__c.Amount__c</summarizedField>
    <summaryForeignKey>Gift_Allocation__c.Annual_Giving_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <summaryFilterItems>
        <field>Gift_Allocation__c.Credit_Type__c</field>
        <operation>equals</operation>
        <value>Soft</value>
    </summaryFilterItems>
    <type>Summary</type>
</CustomField>